优化bat脚本，解压war包后可直接执行startup.bat运行项目。